yamlFiles/full_stack/easy-notes-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easy-notes
  name: easy-notes-service
spec:
  ports:
  - port: 80 #switched to 3000 and did not work
    targetPort: 3000
  selector:
    app: easy-notes-pod
  type: NodePort
