yamlFiles/full_stack/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 32005
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
    nodePort: 30226
  selector:
    app: ingress-nginx
